--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
 		"@stylistic/eslint-plugin-ts": "^2.7.2",
 		"@typescript-eslint/eslint-plugin": "^8.4.0",
 		"@typescript-eslint/parser": "^8.4.0",
+		"en-inflectors": "^1.0.12",
 		"eslint": "^9.10.0",
 		"globals": "^15.9.0",
 		"rxjs": "~7.8.0",
