--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
-	"name": "frontend",
-	"version": "0.0.0",
+	"name": "chatty-app",
+	"version": "0.0.1",
+	"author": "Leesa Ward",
 	"type": "module",
 	"scripts": {
 		"ng": "ng",
