Begin work on generating mock data

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -17,6 +17,7 @@
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"allowSyntheticDefaultImports": true,
+		"allowImportingTsExtensions": true,
 		"noImplicitAny": false,
 		"allowJs": false,
 		"sourceMap": true,
