--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
 	"type": "module",
 	"main": "src/index.ts",
 	"scripts": {
-		"dev": "nodemon"
+		"dev": "nodemon",
+		"generate": "node --import ./loader.mjs utils/generate.ts"
 	},
 	"dependencies": {
 		"express": "^4.19.2",
@@ -14,11 +15,16 @@
 	"devDependencies": {
 		"@stylistic/eslint-plugin-ts": "^2.7.2",
 		"@types/express": "^4.17.21",
+		"@types/lodash": "^4.17.7",
 		"@types/node": "^22.5.4",
 		"@typescript-eslint/eslint-plugin": "^8.4.0",
 		"@typescript-eslint/parser": "^8.4.0",
+		"case": "^1.6.3",
 		"eslint": "^9.10.0",
+		"lodash": "^4.17.21",
+		"name-forge": "^1.0.0",
 		"nodemon": "^3.1.4",
+		"short-unique-id": "^5.2.0",
 		"ts-node": "^10.9.2"
 	}
 }
