--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -77,20 +77,22 @@
 				"test": {
 					"builder": "@angular-devkit/build-angular:karma",
 					"options": {
-						"polyfills": [
-							"zone.js",
-							"zone.js/testing"
-						],
+						"main": "test.ts",
+						"karmaConfig": "karma.conf.cjs",
+						"sourceMap": true,
+						"codeCoverage": true,
 						"tsConfig": "tsconfig.spec.json",
 						"assets": [
+							"src/assets",
 							{
 								"glob": "**/*",
 								"input": "public"
 							}
 						],
-						"styles": [
-							"src/styles.scss"
-						],
+						"styles": ["src/styles.scss"],
+						"stylePreprocessorOptions": {
+							"includePaths": ["src/styles"]
+						},
 						"scripts": []
 					}
 				}
