--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,14 +36,24 @@
 	"devDependencies": {
 		"@angular-devkit/build-angular": "^18.2.7",
 		"@angular/cli": "^18.2.7",
+		"@angular/compiler": "^18.2.7",
 		"@angular/compiler-cli": "^18.2.7",
+		"@testing-library/angular": "^17.3.1",
+		"@testing-library/dom": "^10.0.0",
+		"@testing-library/jasmine-dom": "^1.3.3",
+		"@testing-library/user-event": "^14.5.2",
 		"@types/jasmine": "~5.1.0",
+		"@types/karma": "^6.3.8",
+		"@types/testing-library__jasmine-dom": "^1.3.3",
 		"jasmine-core": "~5.2.0",
 		"karma": "~6.4.0",
 		"karma-chrome-launcher": "~3.2.0",
 		"karma-coverage": "~2.2.0",
+		"karma-esbuild": "^2.3.0",
 		"karma-jasmine": "~5.1.0",
 		"karma-jasmine-html-reporter": "~2.1.0",
+		"karma-spec-reporter": "^0.0.36",
+		"karma-typescript": "^5.5.4",
 		"typescript": "~5.5.2"
 	}
 }
