--- a/server/package.json
+++ b/server/package.json
@@ -15,25 +15,30 @@
 		"chance": "^1.1.12",
 		"cors": "^2.8.5",
 		"express": "^4.19.2",
+		"mongodb": "^6.9.0",
 		"typescript": "^5.5.4"
 	},
 	"devDependencies": {
 		"@stylistic/eslint-plugin-ts": "^2.7.2",
 		"@types/express": "^4.17.21",
+		"@types/jest": "^29.5.13",
 		"@types/lodash": "^4.17.7",
 		"@types/node": "^22.5.4",
 		"@typescript-eslint/eslint-plugin": "^8.4.0",
 		"@typescript-eslint/parser": "^8.4.0",
 		"case": "^1.6.3",
+		"chalk": "^5.3.0",
 		"en-inflectors": "^1.0.12",
 		"eslint": "^9.10.0",
 		"express-jsdoc-swagger": "^1.8.0",
 		"express-list-endpoints": "^7.1.0",
 		"gfynonce": "^1.0.2",
+		"jest": "^29.7.0",
 		"lodash": "^4.17.21",
 		"nodemon": "^3.1.4",
 		"sass": "^1.78.0",
 		"short-unique-id": "^5.2.0",
+		"ts-jest": "^29.2.5",
 		"ts-node": "^10.9.2"
 	}
 }
