Server: Tweaks/fixes to the existing endpoints + 100% unit test coverage for them

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -27,6 +27,10 @@
 		"utils/**/*",
 		"src/**/*"
 	],
+	"exclude": [
+		"jest.setup.ts",
+		"jest.config.ts"
+	],
 	"ts-node": {
 		"esm": true,
 		"experimentalSpecifierResolution": "node"
