--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
 		"@types/jest": "^29.5.13",
 		"@types/lodash": "^4.17.7",
 		"@types/node": "^22.5.4",
+		"@types/supertest": "^6.0.2",
 		"@typescript-eslint/eslint-plugin": "^8.4.0",
 		"@typescript-eslint/parser": "^8.4.0",
 		"case": "^1.6.3",
@@ -38,6 +39,7 @@
 		"nodemon": "^3.1.4",
 		"sass": "^1.78.0",
 		"short-unique-id": "^5.2.0",
+		"supertest": "^7.0.0",
 		"ts-jest": "^29.2.5",
 		"ts-node": "^10.9.2"
 	}
